Fixed footer padding not applying correctly on tablet media query

--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -203,14 +203,14 @@ footer {
         display: block;
         float: none;
     }
-}
-
-/* Smartphone CSS */
-@media only screen and (max-width: 375px) {
     .content,
     .footer-container {
         padding: 0;
     }
+}
+
+/* Smartphone CSS */
+@media only screen and (max-width: 375px) {
     .project {
         padding: 15px;
         border: 1px solid #DDD;
@@ -231,9 +231,6 @@ footer {
     }
     .about {
         padding: 0px;
-    }
-    footer {
-        /* padding: 30px 0px 30px 0px; */
     }
 }
 
